--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,3 +32,8 @@ p,
 a {
   font-family: var(--font-family);
 }
+
+button {
+  background: none;
+  border: none;
+}
